--- a/nginx_solution/myserver.conf
+++ b/nginx_solution/myserver.conf
@@ -16,16 +16,29 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # Serve images, restricted to user `design`
     location /images {
-        alias /home/master/git-repo/TechOrda/nginx_solution/images;
+        root /home/master/git-repo/TechOrda/nginx_solution/images;
+        auth_basic "Restricted Area";
+        auth_basic_user_file /etc/nginx/design.htpasswd;
     }
 
+    # Serve gifs, restricted to user `marketing`
     location /gifs {
-        alias /home/master/git-repo/TechOrda/nginx_solution/gifs;
+        root /home/master/git-repo/TechOrda/nginx_solution/gifs;
+        auth_basic "Restricted Area";
+        auth_basic_user_file /etc/nginx/marketing.htpasswd;
     }
 
     location /secret_word {
-        return 201 'jusan-nginx-locations';
+        # Разрешить доступ с IP из диапазона 192.0.0.1/20, кроме 192.0.0.1
+        allow 192.0.0.0/20;
+        deny 192.0.0.1;
+        # Запретить всем остальным
+        deny all;
+
+        # Возврат строки со статусом 203
+        return 203 "jusan-nginx-ip";
     }
 }
 
