--- a/nginx_solution/myserver.conf
+++ b/nginx_solution/myserver.conf
@@ -43,6 +43,33 @@ server {
 }
 
 server {
+    listen 443 ssl;
+    server_name jusan.kz;
+
+    # Пути к SSL-сертификату и приватному ключу
+    ssl_certificate /etc/nginx/ssl/track-devops.crt;
+    ssl_certificate_key /etc/nginx/ssl/track-devops.key;
+
+    # Настройка SSL параметров
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_dhparam /etc/nginx/ssl/dhparam.pem;
+
+    # Блок location
+    location /secret_word {
+        return 201 "jusan-nginx-cert";
+    }
+}
+
+# Редирект с HTTP на HTTPS
+server {
+    listen 80;
+    server_name jusan.kz;
+    return 301 https://$host$request_uri;
+}
+
+
+server {
     listen 9090;
     server_name example2.com;
 
